--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td>
           <img class="image"
             src="chiragCircle.png"
-            alt="😭 Sorry, picture not available"
+            alt="Sorry, picture not available"
             width="150"
           />
         </td>
